--- a/templates/default/promotion/promotionschemaedit.html
+++ b/templates/default/promotion/promotionschemaedit.html
@@ -14,6 +14,28 @@
 		margin-right: 0.5em;
 	}
 
+	 .schemaattachrow a:nth-child(2) {
+		 margin-left: 0.5em;
+	 }
+
+	.schema-attachment {
+		display: flex;
+		flex-direction: column;
+		width: fit-content;
+	}
+
+	.schema-attachment-options {
+		display: flex;
+		align-items: center;
+		margin-top: 0.5em;
+		justify-content: space-between;
+	}
+
+	.schema-attachment-options input[type="text"] {
+		margin-left: 1em;
+		flex-grow: 1;
+	}
+
 </style>
 
 <h1>{$layout.pagetitle}</h1>
@@ -116,6 +138,81 @@
 			</td>
 		</tr>
 		<tr>
+			<td>
+				{icon name="import"}
+			</td>
+			<td class="nobr">
+				<strong>{trans("New files")}</strong>
+			</td>
+			<td>
+				{$item_custom_contents = array()}
+				{foreach $fileupload.attachments as $fileidx => $file}
+					{capture assign="item_custom_content"}{strip}
+						<label>
+							<input type="checkbox" name="fileupload[attachments][{$fileidx}][checked]"
+								   value="1" form="schemaedit" {if $file.checked} checked{/if}>
+							{trans("default checked")}
+						</label>
+						<input size="10" type="text" name="fileupload[attachments][{$fileidx}][label]"
+							   value="{$file.label}" form="schemaedit" placeholder="{trans("text label")}">
+					{/strip}{/capture}
+					{$item_custom_contents[] = $item_custom_content}
+				{/foreach}
+				{capture assign="new_item_custom_content"}{strip}
+					<label>
+						<input type="checkbox" name="fileupload[attachments][%idx%][checked]"
+							   value="1" form="schemaedit">
+						{trans("default checked")}
+					</label>
+					<input size="10" type="text" name="fileupload[attachments][%idx%][label]"
+						   value="" form="schemaedit" placeholder="{trans("text label")}">
+				{/strip}{/capture}
+				{fileupload id="attachments" fileupload=$fileupload form="schemaedit"
+					item_custom_contents=$item_custom_contents
+					new_item_custom_content=$new_item_custom_content}
+			</td>
+		</tr>
+		{if !empty($schema.attachments)}
+			<tr>
+				<td class="valign-top">
+					{icon name="import"}
+				</td>
+				<td class="valign-top nobr">
+					<strong>{trans("Attached files")}</strong>
+				</td>
+				<td>
+					{foreach $schema.attachments as $schemaattach}
+						<div class="schema-attachment">
+							<div class="schemaattachrow{if $schemaattach.type <= 0} schemaattach{if $schema.attachments[$schemaattach.id].deleted} blend crossed{/if}{/if}">
+								<a href="#">
+									<i class="fa-fw lms-ui-icon-{if $schema.attachments[$schemaattach.id].deleted}cancel{else}delete{/if}"
+										{if $schemaattach.type == 1} style="visibility: hidden;"{/if}></i>
+								</a>
+								{$class = ""}
+								{if $schema.attachments[$schemaattach.id].deleted}
+									{$class = "blend"}
+								{/if}
+								{documentview id="{$schema.id}-{$schemaattach.id}" type=$schemaattach.contenttype name=$schemaattach.filename
+									url="?m=promotionattachmentview&schemaid={$schema.id}&attachmentid={$schemaattach.id}" external=true class=$class
+									text="{$schemaattach.filename} <i class=\"lms-ui-icon-view{if preg_match('/pdf/',$schemaattach.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/', $schemaattach.contenttype)} xls{/if}\"></i>"}
+								<input type="hidden" name="schema[attachments][{$schemaattach.id}][deleted]"
+									value="{$schema.attachments[$schemaattach.id].deleted}" form="schemaedit">
+							</div>
+							<div class="schema-attachment-options">
+								<label>
+									<input type="checkbox" name="schema[attachments][{$schemaattach.id}][checked]"
+										value="1"{if $schemaattach.checked} checked{/if} form="schemaedit">
+									{trans("default checked")}
+								</label>
+								<input size="10" type="text" name="schema[attachments][{$schemaattach.id}][label]"
+									value="{$schemaattach.label}" form="schemaedit" placeholder="{trans("text label")}">
+							</div>
+						</div>
+					{/foreach}
+				</td>
+			</tr>
+		{/if}
+		<tr>
 			<td class="lms-ui-box-buttons" colspan="3">
 				{button type="submit" icon="save" label="Submit" form="schemaedit"}
 				{button icon="cancel" label="Cancel" href="?m=promotionschemainfo&id={$schema.id}"}
@@ -164,6 +261,18 @@
 					$(this).closest(".scombobox").find("select").removeAttr("name");
 				}
 			});
+		});
+
+		$('.schemaattach').on('click', function() {
+			var elem = $(this).closest('.schema-attachment');
+			elem.toggleClass('blend crossed')
+					.find('.lms-ui-button').toggleClass('blend').end()
+					.find('input:not([type="hidden"])').prop('disabled', function() {
+				return !$(this).prop('disabled');
+			});
+			elem.find('i').toggleClass('lms-ui-icon-delete').toggleClass('lms-ui-icon-cancel');
+			elem.find('input[type="hidden"]').val(elem.hasClass('blend') ? 1 : 0);
+			return false;
 		});
 	});
 
