devel: add data-id attribute for each item in network device list for plugins purpose

--- a/templates/default/netdev/netdevlist.html
+++ b/templates/default/netdev/netdevlist.html
@@ -103,7 +103,7 @@
     </THEAD>
     <TBODY>
 	{foreach $netdevlist as $netdev}
-	<TR class="highlight" data-target-url="?m=netdevinfo&id={$netdev.id}" data-name="{$netdev.name}">
+	<TR class="highlight" data-target-url="?m=netdevinfo&id={$netdev.id}" data-name="{$netdev.name}" data-id="{$netdev.id}">
 		<TD class="valign-top">
 			{if $netdev.lastonline}
 				{if ($smarty.now-$netdev.lastonline) > $lastonline_limit}
