bugfix: small visual fix

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -54,7 +54,7 @@
         margin-left: 0.5em;
     }
 
-    #operation-panels {
+    .operation-panels {
         display: flex;
         flex-direction: column;
         width: fit-content;
