bugfix: small visual fix

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -60,6 +60,10 @@
         width: fit-content;
     }
 
+    .operation-panels.delete-check-all-panel {
+        width: auto;
+    }
+
     .operation-panel {
         display: flex;
         flex-wrap: wrap;
@@ -402,7 +406,7 @@
                             </div>
                         </td>
                         <td class="text-right valign-top">
-                            <div class="operation-panels">
+                            <div class="operation-panels delete-check-all-panel">
                                 <div class="operation-panel" id="delete-check-all-panel">
                                     {button icon="delete" label="Delete" id="delete-button"}
                                     <label>
